--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,15 @@
 <!doctype html>
 <html>
 <head>
-  <title>My Page Title</title>
+  <title>AliciaWaltersPages</title>
   <link rel="stylesheet" href="/css/site.css">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 <p>Your content goes here.</p>
