--- a/public/book.html
+++ b/public/book.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>AliciaWalters-home</title>
-  <link ref="stylesheet" href="public/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -26,25 +26,7 @@
 <center>
   <main>
 
-     <div>
-      <img src="ALICIA.png" height="300">
-      </div>
 
-      <div>
-          <h2>About Alicia Walters</h2>
-          <br>
-
-     <ul>
-         <li><B>Name:</B> Alicia Walters </li>
-         <LI><b>Country:</b> United States</LI>
-         <li><b>Country of Origin:</b> China</li>
-         <li><b>Birthdate:</b> June 1</li>
-         <li><b>Age:</b> 22 </li>
-         <li><b>Email:</b> <a href=mailto:aliciaw0601@gmail.com? subject="HTML link">aliciaw0601@gmail.com</a></li>
-
-          </ul>
-
-      </div>
 
     </main>
 
