--- a/public/dog.html
+++ b/public/dog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>AliciaWalters-home</title>
-  <link ref="stylesheet" href="public/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -26,25 +26,42 @@
 <center>
   <main>
 
-     <div>
-      <img src="ALICIA.png" height="300">
-      </div>
-
       <div>
-          <h2>About Alicia Walters</h2>
-          <br>
+          <h2>My Dog TongTong</h2>
+          </div>
+
+        <div>
+
+          <h4>About My dog</h4>
 
      <ul>
-         <li><B>Name:</B> Alicia Walters </li>
+         <li><B>Name:</B> TongTong 童童 </li>
          <LI><b>Country:</b> United States</LI>
-         <li><b>Country of Origin:</b> China</li>
-         <li><b>Birthdate:</b> June 1</li>
-         <li><b>Age:</b> 22 </li>
-         <li><b>Email:</b> <a href=mailto:aliciaw0601@gmail.com? subject="HTML link">aliciaw0601@gmail.com</a></li>
+         <li><b>Country of Origin:</b> Germany</li>
+         <li><b>Birthdate:</b> Febuary 16</li>
+         <li><b>Age:</b> 1 years 8 month </li>
+         <li><b>Weight: </b> 17 pounds</li>
+         <li><b>Breeds:</b> Pure American Eskimo</li>
+         <li><b>Favorite Food: </b> Salmon Bits</li>
+         <li><b>Tricks: </b>
+           <ul>
+             <li>Sit</li>
+             <li>Jump</li>
+             <li>Rollover</li>
+             <li>catch</li>
+             </ul><li>
+
+
 
           </ul>
 
       </div>
+
+      <div>
+
+<img src="dog1.html" height="200px">
+
+
 
     </main>
 
